--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Landing page</title>
-  </head>
-  <body>
-    ― Hello World! &#x1F609;
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Landing page</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <nav class="menu">
+        <ul>
+          <li><a href="#" class="header_nav_link">Главная</a></li>
+          <li><a href="#" class="header_nav_link">О нас</a></li>
+          <li><a href="#" class="header_nav_link">Контакты</a></li>
+          <li><a href="#" class="header_nav_link">Контакты</a></li>
+          <li><a href="#" class="header_nav_link">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="promo">
+      <div class="container">
+        <h1 class="promo_header">Dance studio "Herring in a boat"</h1>
+        <div class="promo_text">
+          Раді вітати вас на нашій сторінці! Не соромтеся - почувайтеся розслабленно!
+        </div>
+        <img src="./assets/images/pivot-dancer-5.png" alt="dancer's_photo" class="promo_photo">
+      </div>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
+</body>
+
 </html>
