Create and fill <main>

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <header>
     <div class="container">
       <nav class="menu">
-        <ul>
-          <li><a href="#" class="header_nav_link">Главная</a></li>
-          <li><a href="#" class="header_nav_link">О нас</a></li>
-          <li><a href="#" class="header_nav_link">Контакты</a></li>
-          <li><a href="#" class="header_nav_link">Контакты</a></li>
+        <ul class="menu_list">
+          <li><a href="/" class="header_nav_link">Головна</a></li>
+          <li><a href="#" class="header_nav_link">Викладачі</a></li>
+          <li><a href="#" class="header_nav_link">Розклад занять</a></li>
+          <li><a href="#" class="header_nav_link">Про нас</a></li>
           <li><a href="#" class="header_nav_link">Контакты</a></li>
         </ul>
       </nav>
@@ -28,15 +28,27 @@
     <section class="promo">
       <div class="container">
         <h1 class="promo_header">Dance studio "Herring in a boat"</h1>
-        <div class="promo_text">
-          Раді вітати вас на нашій сторінці! Не соромтеся - почувайтеся розслабленно!
+        <div class="promo_content">
+          <div class="promo_text">
+            <p>Раді вітати вас на нашій сторінці! Не соромтеся - <span>почувайтеся розслабленно!</span></p>
+            <p>Якщо Ви ніколи не танцювали або завжди мріяли це зробити - сьогодні влучний час!</p>
+            <p>Завдяки танцю, урокам дефіле і фотопозування наші дівчата стають ще більш жіночними, стрункішими та
+              пластичними</p>
+          </div>
+          <img src="./assets/images/dancer.png" alt="dancer's_photo" class="promo_photo">
+          <button class="promo_btn">            
+            <a href="#modal">Приєднуйтесь</a>
+          </button>
+          <div id="modal">
+            <p>Я ще не вигадала, що тут буде )</p>
+            <span style='font-size:100px;'>&#129409;</span>
+            <a href="#" class="close">Добре. Па-па. Закриваю вікно!</a>
+          </div>
         </div>
-        <img src="./assets/images/pivot-dancer-5.png" alt="dancer's_photo" class="promo_photo">
       </div>
     </section>
   </main>
   <footer>
-
   </footer>
 </body>
 
